--- a/public/assets/css/src/index.html/main.css
+++ b/public/assets/css/src/index.html/main.css
@@ -200,6 +200,17 @@ main {
     transition: .2s;
     background-color: #bfbfbf;
 }
+#film-results>tbody>tr {
+    width: 6vw;
+}
+
+#film-results>tbody>tr>th>button {
+    margin-left: 10px;
+    font-size: 1rem;
+    border-radius: 10px;
+    padding: 8px 16px;
+    cursor: pointer;
+}
 
 
 @media only screen and (max-width: 1560px) {
