--- a/public/assets/css/utils/golbal.css
+++ b/public/assets/css/utils/golbal.css
@@ -4,6 +4,7 @@ body {
     padding: 0;
     box-sizing: border-box;
     font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+    overflow-x: hidden;
 }
 
 :root {
