--- a/public/assets/css/src/downloads.html/main.css
+++ b/public/assets/css/src/downloads.html/main.css
@@ -12,8 +12,10 @@ main>h1 {
 main>table {
     width: 100vw;
     border: 1px solid var(--text);
+    border-radius: 5px;
 }
 
 #downloads td, #downloads th {
     border: 1px solid var(--text);
+    border-radius: 5px;
 }
