--- a/public/assets/css/src/page.html/main.css
+++ b/public/assets/css/src/page.html/main.css
@@ -50,6 +50,7 @@ main>table {
 }
 
 main>table>tbody {
+	text-align: center;
     display: none;
     color: white;
 }
@@ -67,4 +68,36 @@ main>table>tbody>tr>th>button {
 #download-status {
     display: none;
     color: white;
+}
+
+@media only screen and (min-width: 1000px) {
+	main>img {
+		transition: .2s;
+		width: 16%;
+		border-radius: 10px;
+	}
+	.tiny-img {
+		transition: .2s;
+		width: 12%;
+	}
+	main>button {
+		width: 16%;
+	}
+	main>table {
+		padding: 1vw 42vw;
+		font-size: 1.4rem;
+	}
+	main>table>tbody>tr>th {
+		padding: 0px 20px;
+	}
+	main>table>tbody>tr>th>button {
+		font-size: 1.4rem;
+		padding: 12px 16px;
+		cursor: pointer;
+		transition: .2s;
+	}
+	main>table>tbody>tr>th>button:hover {
+		background-color: var(--bg);
+		transition: .2s;
+	}
 }
