--- a/public/assets/css/src/downloads.html/main.css
+++ b/public/assets/css/src/downloads.html/main.css
@@ -1,6 +1,7 @@
 main {
     width: 100%;
-    height: 87vh;
+    /* height: 87vh; */
+	/* min-height: 87vh; */
     background-color: var(--sec);
     color: var(--text);
 }
